Initial 10 column revision done

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -162,19 +162,19 @@
 
         </div>
 
-        <div class="row">
-          <div class="col-sm-12">
+        <div class="row justify-content-center">
+          <div class="col-sm-10">
             <h4 class="project-section-header" id="researchDesignProcess">RESEARCH & DESIGN PROCESS</h4>
           </div>
         </div>
 
         <div class="project-page-card">
-          <div class="row">
-            <div class="col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
               <p>I started brainstorming about two approaches for reducing 911 call processing time. On one hand were solutions to help operators, and on the other were solutions to help callers. Then I turned those ideas into some storyboards.</p>
             </div>
           </div>
-          <div class="gallery-three-column">
+          <div class="gallery-two-column">
             <div class="mb-3">
               <img src="../assets/3D Emergency/Storyboard 1.jpg" class="img-fluid">
             </div>
@@ -182,79 +182,89 @@
               <img src="../assets/3D Emergency/Storyboard 2.jpg" class="img-fluid">
             </div>
             <div class="mb-3">
-              <img src="../assets/3D Emergency/Storyboard 3.jpg" class="img-fluid">
-            </div>
-            <div class="mb-3">
               <img src="../assets/3D Emergency/Storyboard 4.jpg" class="img-fluid">
             </div>
             <div class="mb-3">
               <img src="../assets/3D Emergency/Storyboard 5.jpg" class="img-fluid">
             </div>
-            <div class="mb-3">
-              <img src="../assets/3D Emergency/Storyboard 6.jpg" class="img-fluid">
-            </div>
           </div>
 
-          <div class="row">
-            <div class="col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
               <br>
               <p>One idea has stuck out to me, because it could solve a problem the 911 call center manager said she hasn't heard a good solution for yet. Figuring out which floor or room of a building you're in isn't something that GPS can help with, and can slow down operators. What if we encoded that information in an easy way for smart phones to process like QR codes? </p>
               <br>
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-lg-6">
-              <img src="../assets/3D Emergency/Mid call scan sketch.jpg" style="width:100%">
+          <div class="row justify-content-center">
+            <div class="col-lg-5">
+              <img src="../assets/3D Emergency/Mid call scan sketch.jpg" class="float-right" style="width:100%">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-5">
               <img src="../assets/3D Emergency/Sketches from in class pitch.jpg" style="width:100%">
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
               <br>
               <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/" target="_blank">Compose.ly<a/>, and created the story maps with <a href="https://cardboardit.com/" target="_blank">Cardboard</a>.</p>
               <br>
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-lg-4">
-              <img src="../assets/3D Emergency/Personas 1.png" style="width:100%">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-sm-5">
+              <img src="../assets/3D Emergency/Personas 1.png" class="float-right" style="width:100%;">
             </div>
-            <div class="col-lg-4">
-              <img src="../assets/3D Emergency/Personas 2.png" style="width:100%">
-            </div>
-            <div class="col-lg-4">
-              <img src="../assets/3D Emergency/Personas 3.png" style="width:100%">
+            <div class="col-sm-5">
+              <h5>Persona 1</h5>
+              <p>Quick blurb about the persona.</p>
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-sm-12">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-sm-5">
+              <h5>Persona 2</h5>
+              <p>Quick blurb about the persona.</p>
+            </div>
+            <div class="col-sm-5">
+              <img src="../assets/3D Emergency/Personas 2.png" style="width:80%">
+            </div>
+          </div>
+
+          <div class="row justify-content-center align-items-center">
+            <div class="col-sm-5">
+              <img src="../assets/3D Emergency/Personas 3.png" class="float-right" style="width:100%;">
+            </div>
+            <div class="col-sm-5">
+              <h5>Persona 3</h5>
+              <p>Quick blurb about the persona.</p>
+            </div>
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
               <p>Before I started making wireframes and paper prototypes I needed to iron out a few design details with the features I had proposed using a QOC analysis.</p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-6">
+          <div class="row justify-content-center">
+            <div class="col-md-5 col-sm-12">
               <img src="../assets/3D Emergency/Slide10.PNG" style="width:100%">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-5 col-sm-12">
               <img src="../assets/3D Emergency/Slide11.PNG" style="width:100%">
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5 col-sm-12">
               <img src="../assets/3D Emergency/Slide12.PNG" style="width:100%">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-5 col-sm-12">
               <img src="../assets/3D Emergency/Slide13.PNG" style="width:100%">
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
               <p>I decided to implement the critical feature of scanning QR codes to find location information by:</p>
               <ul>
                 <li>Scanning a poster of a QR code once a 911 call has been placed</li>
@@ -265,14 +275,14 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-sm-12">
+        <div class="row justify-content-center">
+          <div class="col-sm-10">
             <h4 class="project-section-header" id="prototypesDemos">PROTOTYPES & DEMOS</h4>
           </div>
         </div>
         <div class="project-page-card">
-          <div class="row">
-            <div class="col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
               <p>Links to demos of a paper and mid-fidelity prototype are below.</p>
               <br>
               <a href="https://youtu.be/E_Wjl02KlPY" target="_blank">Paper Prototype</a><br>
@@ -283,14 +293,14 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-sm-12">
+        <div class="row justify-content-center">
+          <div class="col-sm-10">
             <h4 class="project-section-header" id="reflections">REFLECTION</h4>
           </div>
         </div>
         <div class="project-page-card">
-          <div class="row">
-            <div class="col-sm-12">
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
               <p>This project was a unique challenge for me to take on. It involved designing and prototyping interfaces for two separate parties using different devices working together to achieve a goal. I believe my final solution was creative and practical, but there is certainly room for improvement. QR codes are one way to encode information for smartphones to use, but they aren't foolproof. Providing a secondary way to input this room number information is something that warrants more research.
               <br><br>
               I plan to also present this idea to the local 911 center I toured at the beginning of this project to gather feedback from the experts there. I hope they can help improve the dispatcher UI I designed, and suggest other useful information to include on the interactive floor plan.</p>
