More 3DE revisions

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -142,8 +142,8 @@
 
           <div class="row justify-content-center align-items-center">
             <div class="col-sm-5">
-              <h5>Caller Floor Visualization</h5>
-              <p>Dispatchers, left, and callers, right, would be able to visualize their new location information, saving the dispatchers valuable time.</p>
+              <h5>Floorplan for the Caller</h5>
+              <p>Callers would be able to see their location on an interactive floorplan to help with taking instructions from the dispatchers.</p>
             </div>
             <div class="col-sm-5">
               <img src="../assets/3D Emergency/Phone View Map.gif" style="width:80%">
@@ -152,8 +152,8 @@
 
           <div class="row justify-content-center align-items-center">
             <div class="col-md-10 col-sm-12">
-              <h5>QR Code Integration</h5>
-              <p>Callers would be able to use the camera built into their smartphone to scan emergency QR code posters that are in the room with them. The location information that's encoded in them would be pulled out and displayed for them to communicate to the 911 dispatcher they're speaking with.</p>
+              <h5>Floorplan for the dispatcher</h5>
+              <p>Dispatchers would also be able to see where a caller is on an interactive floorplan. In addition, they would be presented with more information than the caller, such as where first responders should enter a building. This information could be passed down the workflow to be presented to the first responders themselves.</p>
             </div>
             <div class="col-md-10 col-sm-12">
               <img src="../assets/3D Emergency/Dispatch View Map.gif" class="float-right" style="width:100%;">
@@ -174,18 +174,22 @@
               <p>I started brainstorming about two approaches for reducing 911 call processing time. On one hand were solutions to help operators, and on the other were solutions to help callers. Then I turned those ideas into some storyboards.</p>
             </div>
           </div>
-          <div class="gallery-two-column">
-            <div class="mb-3">
-              <img src="../assets/3D Emergency/Storyboard 1.jpg" class="img-fluid">
-            </div>
-            <div class="mb-3">
-              <img src="../assets/3D Emergency/Storyboard 2.jpg" class="img-fluid">
-            </div>
-            <div class="mb-3">
-              <img src="../assets/3D Emergency/Storyboard 4.jpg" class="img-fluid">
-            </div>
-            <div class="mb-3">
-              <img src="../assets/3D Emergency/Storyboard 5.jpg" class="img-fluid">
+          <div class="row justify-content-center">
+            <div class="col-sm-10">
+              <div class="gallery-two-column">
+                <div class="mb-3">
+                  <img src="../assets/3D Emergency/Storyboard 1.jpg" class="img-fluid">
+                </div>
+                <div class="mb-3">
+                  <img src="../assets/3D Emergency/Storyboard 2.jpg" class="img-fluid">
+                </div>
+                <div class="mb-3">
+                  <img src="../assets/3D Emergency/Storyboard 4.jpg" class="img-fluid">
+                </div>
+                <div class="mb-3">
+                  <img src="../assets/3D Emergency/Storyboard 5.jpg" class="img-fluid">
+                </div>
+              </div>
             </div>
           </div>
 
@@ -215,32 +219,22 @@
           </div>
 
           <div class="row justify-content-center align-items-center">
-            <div class="col-sm-5">
+            <div class="col-md-7 col-sm-12">
               <img src="../assets/3D Emergency/Personas 1.png" class="float-right" style="width:100%;">
             </div>
-            <div class="col-sm-5">
-              <h5>Persona 1</h5>
-              <p>Quick blurb about the persona.</p>
+            <div class="col-md-3 col-sm-12">
+              <h5>Primary Persona</h5>
+              <p>Victoria is visiting her friend's new apartment when an emergency happens. She needs to describe her location as best as she can even though she's never been there before.</p>
             </div>
           </div>
 
           <div class="row justify-content-center align-items-center">
-            <div class="col-sm-5">
-              <h5>Persona 2</h5>
-              <p>Quick blurb about the persona.</p>
+            <div class="col-md-3 col-sm-12">
+              <h5>Served Persona</h5>
+              <p>Vince is 911 dispatcher in a large American city. He frequently needs to find out where a caller is inside of large buildings.</p>
             </div>
-            <div class="col-sm-5">
-              <img src="../assets/3D Emergency/Personas 2.png" style="width:80%">
-            </div>
-          </div>
-
-          <div class="row justify-content-center align-items-center">
-            <div class="col-sm-5">
-              <img src="../assets/3D Emergency/Personas 3.png" class="float-right" style="width:100%;">
-            </div>
-            <div class="col-sm-5">
-              <h5>Persona 3</h5>
-              <p>Quick blurb about the persona.</p>
+            <div class="col-md-7 col-sm-12">
+              <img src="../assets/3D Emergency/Personas 4.png" style="width:80%">
             </div>
           </div>
 
