Fixing the margins of each section

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -102,18 +102,18 @@
 
       <div class="container">
 
-        <div class="row justify-content-center">
-          <div class="col-sm-10">
+        <div class="row justify-content-center project-section">
+          <div class="col-sm-10 mb-5">
             <h4 class="project-section-header" id="quickSummary">QUICK SUMMARY</h4>
           </div>
         </div>
-        <div class="project-page-card">
+        <div>
           <div class = "row justify-content-center">
-            <div class="col-sm-10">
+            <div class="col-sm-10 mb-5">
               <h5>Inspiration</h5>
-              <p>I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
+              <p class="mb-5">I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
               <h5>Design Goal</h5>
-              <p>After speaking with 911 dispatchers I learned that GPS coordinates from smartphones are being incorporated into the 911 call process, but they're not a panacea. This project was an attempt to design a new tool that can be used when dialing 9-1-1 in the United States that would help decrease the time it takes to locate a caller.</p>
+              <p class="mb-5">After speaking with 911 dispatchers I learned that GPS coordinates from smartphones are being incorporated into the 911 call process, but they're not a panacea. This project was an attempt to design a new tool that can be used when dialing 9-1-1 in the United States that would help decrease the time it takes to locate a caller.</p>
               <h5>Outcome</h5>
               <p>I re-imagined the interaction between 911 callers and dispatchers when callers need to describe their specific location within a building. I did this by adding a new tool to caller's physical environments, QR codes, and designed a solution to integrate them with the current process of calling 911. I created prototypes to model how the new interactions would happen on both a caller's smartphone and the monitors in front of 911 dispatchers.</p>
             </div>
@@ -123,29 +123,29 @@
           </div>
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col-sm-10">
+        <div class="row justify-content-center project-section">
+          <div class="col-sm-10  mb-5">
             <h4 class="project-section-header" id="newTools">THE NEW TOOLS</h4>
           </div>
         </div>
 
         <div class="project-page-card">
           <div class="row justify-content-center align-items-center">
-            <div class="col-sm-5">
+            <div class="col-sm-5 mb-5">
               <img src="../assets/3D Emergency/QR Code Scan.gif" class="float-right" style="width:80%;">
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-5 mb-5">
               <h5>QR Code Integration</h5>
               <p>Callers would be able to use the camera built into their smartphone to scan emergency QR code posters that are in the room with them. The location information that's encoded in them would be pulled out and displayed for them to communicate to the 911 dispatcher they're speaking with.</p>
             </div>
           </div>
 
           <div class="row justify-content-center align-items-center">
-            <div class="col-sm-5">
+            <div class="col-sm-5 mb-5">
               <h5>Floorplan for the Caller</h5>
               <p>Callers would be able to see their location on an interactive floorplan to help with taking instructions from the dispatchers.</p>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-5 mb-5">
               <img src="../assets/3D Emergency/Phone View Map.gif" style="width:80%">
             </div>
           </div>
@@ -162,20 +162,20 @@
 
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col-sm-10">
+        <div class="row justify-content-center project-section">
+          <div class="col-sm-10 mb-5">
             <h4 class="project-section-header" id="researchDesignProcess">RESEARCH & DESIGN PROCESS</h4>
           </div>
         </div>
 
         <div class="project-page-card">
           <div class="row justify-content-center">
-            <div class="col-sm-10">
+            <div class="col-sm-10 mb-5">
               <p>I started brainstorming about two approaches for reducing 911 call processing time. On one hand were solutions to help operators, and on the other were solutions to help callers. Then I turned those ideas into some storyboards.</p>
             </div>
           </div>
           <div class="row justify-content-center">
-            <div class="col-sm-10">
+            <div class="col-sm-10 mb-5">
               <div class="gallery-two-column">
                 <div class="mb-3">
                   <img src="../assets/3D Emergency/Storyboard 1.jpg" class="img-fluid">
@@ -194,7 +194,7 @@
           </div>
 
           <div class="row justify-content-center">
-            <div class="col-sm-10">
+            <div class="col-sm-10 mb-5">
               <br>
               <p>One idea has stuck out to me, because it could solve a problem the 911 call center manager said she hasn't heard a good solution for yet. Figuring out which floor or room of a building you're in isn't something that GPS can help with, and can slow down operators. What if we encoded that information in an easy way for smart phones to process like QR codes? </p>
               <br>
@@ -202,44 +202,42 @@
           </div>
 
           <div class="row justify-content-center">
-            <div class="col-lg-5">
+            <div class="col-lg-5 mb-5">
               <img src="../assets/3D Emergency/Mid call scan sketch.jpg" class="float-right" style="width:100%">
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 mb-5">
               <img src="../assets/3D Emergency/Sketches from in class pitch.jpg" style="width:100%">
             </div>
           </div>
 
           <div class="row justify-content-center">
-            <div class="col-sm-10">
-              <br>
+            <div class="col-sm-10 mb-5">
               <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/" target="_blank">Compose.ly<a/>, and created the story maps with <a href="https://cardboardit.com/" target="_blank">Cardboard</a>.</p>
-              <br>
             </div>
           </div>
 
           <div class="row justify-content-center align-items-center">
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-7 col-sm-12 mb-5">
               <img src="../assets/3D Emergency/Personas 1.png" class="float-right" style="width:100%;">
             </div>
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-3 col-sm-12 mb-5">
               <h5>Primary Persona</h5>
               <p>Victoria is visiting her friend's new apartment when an emergency happens. She needs to describe her location as best as she can even though she's never been there before.</p>
             </div>
           </div>
 
           <div class="row justify-content-center align-items-center">
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-3 col-sm-12 mb-5">
               <h5>Served Persona</h5>
               <p>Vince is 911 dispatcher in a large American city. He frequently needs to find out where a caller is inside of large buildings.</p>
             </div>
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-7 col-sm-12 mb-5">
               <img src="../assets/3D Emergency/Personas 4.png" style="width:80%">
             </div>
           </div>
 
           <div class="row justify-content-center">
-            <div class="col-sm-10">
+            <div class="col-sm-10 mb-5">
               <p>Before I started making wireframes and paper prototypes I needed to iron out a few design details with the features I had proposed using a QOC analysis.</p>
             </div>
           </div>
@@ -250,10 +248,10 @@
             <div class="col-md-5 col-sm-12">
               <img src="../assets/3D Emergency/Slide11.PNG" style="width:100%">
             </div>
-            <div class="col-md-5 col-sm-12">
+            <div class="col-md-5 col-sm-12 mb-5">
               <img src="../assets/3D Emergency/Slide12.PNG" style="width:100%">
             </div>
-            <div class="col-md-5 col-sm-12">
+            <div class="col-md-5 col-sm-12 mb-5">
               <img src="../assets/3D Emergency/Slide13.PNG" style="width:100%">
             </div>
           </div>
@@ -269,35 +267,33 @@
           </div>
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col-sm-10">
+        <div class="row justify-content-center project-section">
+          <div class="col-sm-10 mb-5">
             <h4 class="project-section-header" id="prototypesDemos">PROTOTYPES & DEMOS</h4>
           </div>
         </div>
         <div class="project-page-card">
           <div class="row justify-content-center">
-            <div class="col-sm-10">
+            <div class="col-sm-10 mb-5">
               <p>Links to demos of a paper and mid-fidelity prototype are below.</p>
-              <br>
               <a href="https://youtu.be/E_Wjl02KlPY" target="_blank">Paper Prototype</a><br>
               <a href="https://youtu.be/kfK_NslRQ0A" target="_blank">Mid-Fidelity Prototype</a><br>
               <a href="https://youtu.be/XBtnex3qL28" target="_blank">Final Prototype Demo</a><br>
-              <br>
             </div>
           </div>
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col-sm-10">
+        <div class="row justify-content-center project-section">
+          <div class="col-sm-10 mb-5">
             <h4 class="project-section-header" id="reflections">REFLECTION</h4>
           </div>
         </div>
         <div class="project-page-card">
           <div class="row justify-content-center">
-            <div class="col-sm-10">
-              <p>This project was a unique challenge for me to take on. It involved designing and prototyping interfaces for two separate parties using different devices working together to achieve a goal. I believe my final solution was creative and practical, but there is certainly room for improvement. QR codes are one way to encode information for smartphones to use, but they aren't foolproof. Providing a secondary way to input this room number information is something that warrants more research.
-              <br><br>
-              I plan to also present this idea to the local 911 center I toured at the beginning of this project to gather feedback from the experts there. I hope they can help improve the dispatcher UI I designed, and suggest other useful information to include on the interactive floor plan.</p>
+            <div class="col-sm-10 mb-5">
+              <p>This project was a unique challenge for me to take on. It involved designing and prototyping interfaces for two separate parties using different devices working together to achieve a goal. I believe my final solution was creative and practical, but there is certainly room for improvement. QR codes are one way to encode information for smartphones to use, but they aren't foolproof. Providing a secondary way to input this room number information is something that warrants more research.</p>
+
+              <p>I plan to also present this idea to the local 911 center I toured at the beginning of this project to gather feedback from the experts there. I hope they can help improve the dispatcher UI I designed, and suggest other useful information to include on the interactive floor plan.</p>
               <br>
             </div>
           </div>
