--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -80,8 +80,8 @@
 
       <div class="container">
         <div class="project-page-card">
-          <div class = "row">
-            <div class="col-lg-12">
+          <div class = "row justify-content-center">
+            <div class="col-lg-10">
               <img src="../assets/3D Emergency/mobile screen mockup collage.png" class="img-fluid">
             </div>
           </div>
